# DoIBuyIt

./: .gitignore  LICENSE  README.md  category_map.json
client/: .prettierrc  eslint.config.js  next.config.js  package.json  tsconfig.json
client/app/: ThemeWrapper.tsx  layout.tsx  page.tsx
client/components/: Button.tsx  Input.tsx  ProductCard.tsx
server/: README.md  chemist.py  coles.py  main.py  manage.py  pyproject.toml  requirements.txt  setup.sql  test_poly.py
server/config/: colors.py  constants.py
server/docker/: .dockerignore  Dockerfile  docker-compose.yml
server/doibuyit/: asgi.py  settings.py  urls.py  wsgi.py
server/load/: price.py  product.py
server/products/: models.py  paginations.py  serializers.py  views.py
server/products/migrations/: 0001_initial.py
server/spiders/: coles.py  woolworths.py
server/transform/: dataframe.py  price.py  product.py  rarity-calc.ipynb  woolworths.py
server/utils/: category.py  date.py  woolworths.py
