[project]
description = "Python server for DoIBuyIt"
name = "dibi_server"
readme = "README.md"
requires-python = ">=3.13"
version = "1.0.1"

dependencies = [
  "arrow==1.3.0",
  "asgiref==3.8.1",
  "attrs==24.2.0",
  "automat==24.8.1",
  "certifi==2024.8.30",
  "cffi==1.17.1",
  "charset-normalizer==3.4.0",
  "constantly==23.10.4",
  "cryptography==43.0.1",
  "cssselect==1.2.0",
  "defusedxml==0.7.1",
  "django==5.1.2",
  "djangorestframework==3.15.2",
  "fqdn==1.5.1",
  "hyperlink==21.0.0",
  "idna==3.10",
  "incremental==24.7.2",
  "isoduration==20.11.0",
  "itemadapter==0.9.0",
  "itemloaders==1.3.2",
  "jmespath==1.0.1",
  "jsonpointer==3.0.0",
  "lxml==5.3.0",
  "numpy==2.1.2",
  "packaging==24.1",
  "pandas==2.2.3",
  "parsel==1.9.1",
  "protego==0.3.1",
  "psycopg2==2.9.10",
  "pyasn1==0.6.1",
  "pyasn1-modules==0.4.1",
  "pycparser==2.22",
  "pydispatcher==2.0.7",
  "pyopenssl==24.2.1",
  "python-dateutil==2.9.0.post0",
  "pytz==2024.2",
  "queuelib==1.7.0",
  "requests==2.32.3",
  "requests-file==2.1.0",
  "scrapy==2.11.2",
  "service-identity==24.1.0",
  "six==1.16.0",
  "sqlparse==0.5.1",
  "tldextract==5.1.2",
  "twisted==24.7.0",
  "types-python-dateutil==2.9.0.20241003",
  "typing-extensions==4.12.2",
  "tzdata==2024.2",
  "uri-template==1.3.0",
  "urllib3==2.2.3",
  "w3lib==2.2.1",
  "webcolors==24.8.0",
  "zope-interface==7.1.0",
]

[project.optional-dependencies]
dev = [
  "filelock==3.16.1",
  "pip-autoremove==0.10.0",
  "pyclean==3.0.0",
  "setuptools==75.1.0",
]
